--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/SoundWave-icon-opal.png" />
+    
 
     <!-- Google Fonts connect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
