--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./logo-icon-opal.png" />
+    <link rel="apple-touch-icon" href="./logo-icon-opal.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/SoundWave-icon-opal.png" />
     
 
     <!-- Google Fonts connect -->
@@ -17,10 +17,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- Roboto Mono -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"> 
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">  -->
+
+    <!-- Dokdo -->
+    <link href="https://fonts.googleapis.com/css2?family=Dokdo&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"> 
+
+    <!-- Rock Salt -->
+    <link href="https://fonts.googleapis.com/css2?family=Dokdo&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Rock+Salt&display=swap" rel="stylesheet"> 
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Delay</title>
+    <title>SoundWave</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
